# ChatBotCpp

./: CMakeLists.txt  README.md  main.cpp
application/: TaskListService.cpp  TaskListService.h
client/controls/chat/: ChatView.cpp  ChatView.h  ChatViewModel.cpp  ChatViewModel.h
client/feature/framework/: Action.h  Reducer.h  Store.h
client/feature/lists_feature/: ListsFeatureAcions.h  ListsFeatureReducer.cpp  ListsFeatureReducer.h  ListsFeatureState.h
client/feature/lists_feature/presentation/: TaskListsPage.cpp  TaskListsPage.h
controls/chat/: ChatView.cpp  ChatView.h  ChatViewModel.cpp  ChatViewModel.h
core/: Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskStatus.h
data_access/: SqliteService.cpp  SqliteService.h  TaskListRepository.cpp  TaskListRepository.h
data_access_sqlite/: SqliteService.cpp  SqliteService.h  TaskListRepository.cpp  TaskListRepository.h
data_access_tests/: SqliteServiceTests.cpp  TaskListRepositoryTests.cpp
